--- a/study_code/a_project/scss/src/main_v2.scss
+++ b/study_code/a_project/scss/src/main_v2.scss
@@ -9,6 +9,7 @@ html, body { color: #171717; font-weight: 400;}
 
 #wrap { width: 100%; height: auto;}
 @import '../common/headBox';
+@import '../common/footBox';
 
 #viewBox {
   width: 100%; height: 600px;
