--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -359,7 +359,7 @@ html, body {
 #footBox {
   width: 100%;
   height: 500px;
-  padding: 70px 0;
+  padding: 70px 20px;
   background-color: #1c1c1c;
 }
 .foot_top_area {
@@ -421,21 +421,95 @@ html, body {
 }
 .foot_main_area .foot_main_btn li {
   position: relative;
+  margin-right: 10px;
+  padding-right: 15px;
+}
+.foot_main_area .foot_main_btn li:last-child {
+  margin-right: 0;
+  padding-right: 0;
 }
 .foot_main_area .foot_main_btn li::after {
   content: "";
   display: block;
   position: absolute;
-  top: 50px;
+  top: 50%;
   right: 0;
   width: 3px;
   height: 3px;
   background-color: #ddd;
 }
+.foot_main_area .foot_main_btn li:last-child::after {
+  display: none;
+}
+.foot_main_area .foot_main_btn .foot_personal {
+  font-weight: 700;
+}
 .foot_main_area .foot_main_btn a {
   display: block;
   width: 100%;
   height: 100%;
+}
+.foot_main_area .foot_info {
+  width: 600px;
+  height: 250px;
+  margin-top: 40px;
+}
+.foot_main_area .foot_info p {
+  display: block;
+  margin-bottom: 20px;
+  color: #ddd;
+}
+.foot_main_area .foot_info p:last-child {
+  margin-bottom: 0;
+}
+.foot_main_area .foot_bottom_btn {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  height: auto;
+}
+.foot_main_area .foot_bottom_btn li {
+  margin-right: 20px;
+}
+.foot_facebook a {
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-image: url(../../img/facebook.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+.foot_facebook a > span {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+
+.foot_instagram a {
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-image: url(../../img/instagram.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+.foot_instagram a > span {
+  display: block;
+  position: absolute;
+  z-index: -1;
+  clip: rect(0 0 0 0);
+  width: 0;
+  height: 0;
+  overflow: hidden;
 }
 
 #viewBox {
