--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -5,7 +5,7 @@
 
 #footBox {
   width: 100%; height: 500px;
-  padding: 70px 0;
+  padding: 70px 20px;
   background-color: #1c1c1c;
 
   @at-root .foot_top_area {
@@ -40,14 +40,55 @@
       font-size: 16px;
       text-align: left; color: #ddd;
 
-      li { position: relative; }
+      li { position: relative; margin-right: 10px; padding-right: 15px; }
+      li:last-child {margin-right: 0; padding-right: 0;}
       li::after {
         content: ""; display: block;
-        position: absolute; top: 50px; right: 0;
+        position: absolute; top: 50%; right: 0;
         width: 3px; height: 3px;
         background-color: #ddd;
       }
+      li:last-child::after { display: none; }
+
+      .foot_personal { font-weight: 700;}
+
       a { @include full;}
+    } // .foot_main_btn
+
+    .foot_info {
+      width: 600px; height: 250px;
+      margin-top: 40px;
+
+      p { 
+        display: block;
+        margin-bottom: 20px;
+        color: #ddd;
+      
+        &:last-child { margin-bottom: 0;}
+      }
+      
+    } // .foot_info
+
+    .foot_bottom_btn {
+      display: flex; justify-content: space-between;
+      position: absolute;
+      bottom: 0; right: 0;
+      width: 80px; height: auto;
+
+      li {
+        margin-right: 20px;
+
+        @at-root .foot_facebook a {
+          display: block;
+          width: 30px; height: 30px;
+          @include img('facebook.png');
+        }
+        @at-root .foot_instagram a{
+          display: block;
+          width: 30px; height: 30px;
+          @include img('instagram.png');
+        }
+      }
     }
   } // .foot_main_area
 
