--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -23,6 +23,7 @@ html, body {
   padding: 30px 100px;
   background-color: rgba(255, 255, 255, 0.8);
 }
+
 @media all and (max-width: 1279px) {
   h1 {
     width: 170px;
@@ -47,10 +48,11 @@ html, body {
     overflow: hidden;
   }
 
-  #headBox #navigation {
+  #navigation {
     display: none;
   }
-  #headBox #hand_nav {
+
+  #hand_nav {
     display: block;
     display: flex;
     justify-content: space-between;
@@ -97,7 +99,7 @@ html, body {
     display: block;
   }
 
-  #headBox #hand_nav .hand_search {
+  #hand_nav .hand_search {
     width: 40px;
     height: 40px;
     background-image: url(../../img/search.png);
@@ -105,7 +107,7 @@ html, body {
     background-position: 50% 50%;
     background-size: contain;
   }
-  #headBox #hand_nav .hand_search > span {
+  #hand_nav .hand_search > span {
     display: block;
     position: absolute;
     z-index: -1;
@@ -114,7 +116,7 @@ html, body {
     height: 0;
     overflow: hidden;
   }
-  #headBox #hand_nav .hand_cart {
+  #hand_nav .hand_cart {
     width: 40px;
     height: 40px;
     background-image: url(../../img/cart.png);
@@ -122,7 +124,7 @@ html, body {
     background-position: 50% 50%;
     background-size: contain;
   }
-  #headBox #hand_nav .hand_cart > span {
+  #hand_nav .hand_cart > span {
     display: block;
     position: absolute;
     z-index: -1;
@@ -131,7 +133,7 @@ html, body {
     height: 0;
     overflow: hidden;
   }
-  #headBox #hand_nav .hand_menu {
+  #hand_nav .hand_menu {
     width: 40px;
     height: 40px;
     background-image: url(../../img/menu.png);
@@ -139,7 +141,7 @@ html, body {
     background-position: 50% 50%;
     background-size: contain;
   }
-  #headBox #hand_nav .hand_menu > span {
+  #hand_nav .hand_menu > span {
     display: block;
     position: absolute;
     z-index: -1;
@@ -173,12 +175,14 @@ html, body {
     overflow: hidden;
   }
 
-  #headBox #naviagtion {
+  #naviagtion {
     display: block;
   }
-  #headBox #hand_nav {
+
+  #hand_nav {
     display: none;
   }
+
   #gnb ul {
     position: absolute;
     left: 0;
@@ -355,163 +359,319 @@ html, body {
     overflow: hidden;
   }
 }
+@media all and (max-width: 1279px) {
+  #footBox {
+    width: 100%;
+    height: 400px;
+    padding: 70px 60px;
+    background-color: #1c1c1c;
+  }
 
-#footBox {
-  width: 100%;
-  height: 500px;
-  padding: 70px 20px;
-  background-color: #1c1c1c;
-}
-.foot_top_area {
-  display: flex;
-  justify-content: space-between;
-  width: 93.75%;
-  height: 40px;
-  margin: auto;
-  margin-bottom: 30px;
-}
-.foot_top_area h2 {
-  width: 112px;
-  height: 30px;
-  background-image: url(../../img/footer-logo-text.svg);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: contain;
-}
-.foot_top_area h2 > span {
-  display: block;
-  position: absolute;
-  z-index: -1;
-  clip: rect(0 0 0 0);
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
-.foot_top_area .foot_top_btn {
-  display: flex;
-  justify-content: space-between;
-  width: 300px;
-  height: 30px;
-  font-size: 16px;
-  text-align: left;
-  color: #ddd;
-}
-.foot_top_area .foot_top_btn > div {
-  margin-right: 20px;
-  line-height: 30px;
-}
-.foot_top_area .foot_top_btn > div:last-child {
-  margin-right: 0;
-}
+  .foot_top_area {
+    width: 100%;
+    height: 120px;
+    margin: auto;
+    margin-bottom: 40px;
+  }
+  .foot_top_area h2 {
+    width: 112px;
+    height: 30px;
+    margin-bottom: 60px;
+    background-image: url(../../img/footer-logo-text.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .foot_top_area h2 > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .foot_top_area .foot_top_btn {
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    height: 30px;
+    margin: auto;
+    font-size: 16px;
+    text-align: left;
+    color: #ddd;
+  }
+  .foot_top_area .foot_top_btn > div {
+    margin-right: 20px;
+    line-height: 30px;
+  }
+  .foot_top_area .foot_top_btn > div:last-child {
+    margin-right: 0;
+  }
 
-.foot_main_area {
-  position: relative;
-  width: 93.75%;
-  height: 300px;
-  margin: auto;
-}
-.foot_main_area .foot_main_btn {
-  display: flex;
-  justify-content: space-between;
-  width: 600px;
-  height: 30px;
-  font-size: 16px;
-  text-align: left;
-  color: #ddd;
-}
-.foot_main_area .foot_main_btn li {
-  position: relative;
-  margin-right: 10px;
-  padding-right: 15px;
-}
-.foot_main_area .foot_main_btn li:last-child {
-  margin-right: 0;
-  padding-right: 0;
-}
-.foot_main_area .foot_main_btn li::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 50%;
-  right: 0;
-  width: 3px;
-  height: 3px;
-  background-color: #ddd;
-}
-.foot_main_area .foot_main_btn li:last-child::after {
-  display: none;
-}
-.foot_main_area .foot_main_btn .foot_personal {
-  font-weight: 700;
-}
-.foot_main_area .foot_main_btn a {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.foot_main_area .foot_info {
-  width: 600px;
-  height: 250px;
-  margin-top: 40px;
-}
-.foot_main_area .foot_info p {
-  display: block;
-  margin-bottom: 20px;
-  color: #ddd;
-}
-.foot_main_area .foot_info p:last-child {
-  margin-bottom: 0;
-}
-.foot_main_area .foot_bottom_btn {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 80px;
-  height: auto;
-}
-.foot_main_area .foot_bottom_btn li {
-  margin-right: 20px;
-}
-.foot_facebook a {
-  display: block;
-  width: 30px;
-  height: 30px;
-  background-image: url(../../img/facebook.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: contain;
-}
-.foot_facebook a > span {
-  display: block;
-  position: absolute;
-  z-index: -1;
-  clip: rect(0 0 0 0);
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
+  .foot_main_area {
+    position: relative;
+    width: 600px;
+    height: auto;
+    margin: auto;
+  }
+  .foot_main_area .foot_main_btn {
+    display: flex;
+    justify-content: space-between;
+    width: 600px;
+    height: 30px;
+    font-size: 16px;
+    text-align: left;
+    color: #ddd;
+    margin-bottom: 30px;
+  }
+  .foot_main_area .foot_main_btn li {
+    position: relative;
+    margin-right: 15px;
+    padding-right: 20px;
+  }
+  .foot_main_area .foot_main_btn li:last-child {
+    margin-right: 0;
+    padding-right: 0;
+  }
+  .foot_main_area .foot_main_btn li::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 3px;
+    height: 3px;
+    background-color: #ddd;
+  }
+  .foot_main_area .foot_main_btn li:last-child::after {
+    display: none;
+  }
+  .foot_main_area .foot_main_btn .foot_personal {
+    font-weight: 700;
+  }
+  .foot_main_area .foot_main_btn a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .foot_main_area .foot_info p {
+    display: none;
+  }
+  .foot_main_area .foot_info p.copyright {
+    display: block;
+    width: 336px;
+    height: auto;
+    margin: auto;
+    color: #ddd;
+  }
+  .foot_main_area .foot_bottom_btn {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 80px;
+    height: auto;
+  }
+  .foot_main_area .foot_bottom_btn li {
+    margin-right: 20px;
+  }
+  .foot_facebook a {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-image: url(../../img/facebook.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .foot_facebook a > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
 
-.foot_instagram a {
-  display: block;
-  width: 30px;
-  height: 30px;
-  background-image: url(../../img/instagram.png);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: contain;
+  .foot_instagram a {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-image: url(../../img/instagram.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .foot_instagram a > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
 }
-.foot_instagram a > span {
-  display: block;
-  position: absolute;
-  z-index: -1;
-  clip: rect(0 0 0 0);
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
+@media all and (min-width: 1280px) {
+  #footBox {
+    width: 100%;
+    height: 600px;
+    padding: 70px 60px;
+    background-color: #1c1c1c;
+  }
+  .foot_top_area {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 40px;
+    margin: auto;
+    margin-bottom: 30px;
+  }
+  .foot_top_area h2 {
+    width: 112px;
+    height: 30px;
+    background-image: url(../../img/footer-logo-text.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .foot_top_area h2 > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .foot_top_area .foot_top_btn {
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    height: 30px;
+    font-size: 16px;
+    text-align: left;
+    color: #ddd;
+  }
+  .foot_top_area .foot_top_btn > div {
+    margin-right: 20px;
+    line-height: 30px;
+  }
+  .foot_top_area .foot_top_btn > div:last-child {
+    margin-right: 0;
+  }
 
+  .foot_main_area {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    margin: auto;
+  }
+  .foot_main_area .foot_main_btn {
+    display: flex;
+    justify-content: space-between;
+    width: 600px;
+    height: 30px;
+    font-size: 16px;
+    text-align: left;
+    color: #ddd;
+  }
+  .foot_main_area .foot_main_btn li {
+    position: relative;
+    margin-right: 10px;
+    padding-right: 15px;
+  }
+  .foot_main_area .foot_main_btn li:last-child {
+    margin-right: 0;
+    padding-right: 0;
+  }
+  .foot_main_area .foot_main_btn li::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 3px;
+    height: 3px;
+    background-color: #ddd;
+  }
+  .foot_main_area .foot_main_btn li:last-child::after {
+    display: none;
+  }
+  .foot_main_area .foot_main_btn .foot_personal {
+    font-weight: 700;
+  }
+  .foot_main_area .foot_main_btn a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .foot_main_area .foot_info {
+    width: 600px;
+    height: 250px;
+    margin-top: 40px;
+  }
+  .foot_main_area .foot_info p {
+    display: block;
+    margin-bottom: 20px;
+    color: #ddd;
+  }
+  .foot_main_area .foot_info p:last-child {
+    margin-bottom: 0;
+  }
+  .foot_main_area .foot_bottom_btn {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 80px;
+    height: auto;
+  }
+  .foot_main_area .foot_bottom_btn li {
+    margin-right: 20px;
+  }
+  .foot_facebook a {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-image: url(../../img/facebook.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .foot_facebook a > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .foot_instagram a {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-image: url(../../img/instagram.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .foot_instagram a > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+}
 #viewBox {
   width: 100%;
   height: 600px;
