--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -3,24 +3,31 @@
 @import '../common/mixin';
 @import '../common/variable';
 
-#footBox {
-  width: 100%; height: 500px;
-  padding: 70px 20px;
-  background-color: #1c1c1c;
+
+
+// ~1279px -----------------------------------------------------------------------
+@media all and (max-width: 1279px){
+  #footBox {
+    width: 100%; height: 400px;
+    padding: 70px 60px;
+    background-color: #1c1c1c;
+  } // #footBox
 
   @at-root .foot_top_area {
-    display: flex; justify-content: space-between;
-    width: 93.75%; height: 40px;
+    width: 100%; height: 120px;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 
     h2 {
       width: 112px; height: 30px;
+      margin-bottom: 60px;
       @include img('footer-logo-text.svg');
     }
+
     .foot_top_btn {
       display: flex; justify-content: space-between;
       width: 300px; height: 30px;
+      margin: auto;
       font-size: 16px;
       text-align: left; color: #ddd;
 
@@ -31,16 +38,16 @@
 
   @at-root .foot_main_area {
     position: relative;
-    width: 93.75%; height: 300px;
+    width: 600px; height: auto;
     margin: auto;
-
     .foot_main_btn {
       display: flex; justify-content: space-between;
       width: 600px; height: 30px;
       font-size: 16px;
       text-align: left; color: #ddd;
+      margin-bottom: 30px;
 
-      li { position: relative; margin-right: 10px; padding-right: 15px; }
+      li { position: relative; margin-right: 15px; padding-right: 20px; }
       li:last-child {margin-right: 0; padding-right: 0;}
       li::after {
         content: ""; display: block;
@@ -55,25 +62,23 @@
       a { @include full;}
     } // .foot_main_btn
 
-    .foot_info {
-      width: 600px; height: 250px;
-      margin-top: 40px;
 
-      p { 
-        display: block;
-        margin-bottom: 20px;
+    .foot_info p { 
+      display: none;
+      &.copyright { 
+        display: block; 
+        width: 336px; height: auto;
+        margin: auto;
         color: #ddd;
-      
-        &:last-child { margin-bottom: 0;}
       }
-      
-    } // .foot_info
+    }
 
     .foot_bottom_btn {
       display: flex; justify-content: space-between;
       position: absolute;
       bottom: 0; right: 0;
       width: 80px; height: auto;
+
 
       li {
         margin-right: 20px;
@@ -91,8 +96,101 @@
       }
     }
   } // .foot_main_area
+} // ~1279px =====================================================================
+
+// 1280px ~ ----------------------------------------------------------------------
+
+@media all and (min-width: 1280px){
+  #footBox {
+    width: 100%; height: 600px;
+    padding: 70px 60px;
+    background-color: #1c1c1c;
+  
+    @at-root .foot_top_area {
+      display: flex; justify-content: space-between;
+      width: 100%; height: 40px;
+      margin: auto;
+      margin-bottom: 30px;
+
+      h2 {
+        width: 112px; height: 30px;
+        @include img('footer-logo-text.svg');
+      }
+      .foot_top_btn {
+        display: flex; justify-content: space-between;
+        width: 300px; height: 30px;
+        font-size: 16px;
+        text-align: left; color: #ddd;
+
+        & > div { margin-right: 20px; line-height: 30px;}
+        & > div:last-child { margin-right: 0;}
+      }
+    } // .foot_top_area
+
+    @at-root .foot_main_area {
+      position: relative;
+      width: 100%; height: 300px;
+      margin: auto;
+
+      .foot_main_btn {
+        display: flex; justify-content: space-between;
+        width: 600px; height: 30px;
+        font-size: 16px;
+        text-align: left; color: #ddd;
+
+        li { position: relative; margin-right: 10px; padding-right: 15px; }
+        li:last-child {margin-right: 0; padding-right: 0;}
+        li::after {
+          content: ""; display: block;
+          position: absolute; top: 50%; right: 0;
+          width: 3px; height: 3px;
+          background-color: #ddd;
+        }
+        li:last-child::after { display: none; }
+
+        .foot_personal { font-weight: 700;}
+
+        a { @include full;}
+      } // .foot_main_btn
+
+      .foot_info {
+        width: 600px; height: 250px;
+        margin-top: 40px;
+
+        p { 
+          display: block;
+          margin-bottom: 20px;
+          color: #ddd;
+        
+          &:last-child { margin-bottom: 0;}
+        }
+        
+      } // .foot_info
+
+      .foot_bottom_btn {
+        display: flex; justify-content: space-between;
+        position: absolute;
+        bottom: 0; right: 0;
+        width: 80px; height: auto;
 
 
-} // #footBox
+        li {
+          margin-right: 20px;
+
+          @at-root .foot_facebook a {
+            display: block;
+            width: 30px; height: 30px;
+            @include img('facebook.png');
+          }
+          @at-root .foot_instagram a{
+            display: block;
+            width: 30px; height: 30px;
+            @include img('instagram.png');
+          }
+        }
+      }
+    } // .foot_main_area
+  } // #footBox
+} // 1280px ~ ====================================================================
 
 
