--- a/study_code/a_project/scss/common/_headBox.scss
+++ b/study_code/a_project/scss/common/_headBox.scss
@@ -10,190 +10,189 @@
   padding: 30px 100px;
   background-color: rgba($color_white, 0.8);
   
-  // ~1279px
-  @media all and (max-width: 1279px) {
-    @at-root h1 {
-      width: 170px; height: 40px;
-      // margin-top: 30px;
-      a{ 
-        @include full;
-        @include img('logo-cubeme-text.png');
-        // background-position-y: 10px;
-        
-      }
-    } // h1
-
-    #navigation { display: none;}
-    #hand_nav { 
-      display: block;
-      display: flex; justify-content: space-between;
-      width: 230px; height: 40px;
-      // margin-top: 40px;
-
-      @at-root .hand_language {
-        position: relative;
-        width: 40px; height: 40px;
-        @include img('global_1.png');
-        ul {
-          display: none;
-          position: absolute;
-          top: 50px; left: 0;
-          li {
-            margin-bottom: 5px;
-          }
-        }
-        a { 
-          display: none;
-          width: 50px; height: 20px;
-          font-size: 14px;
-        }
-        &:hover ul { display: block;}
-        &:focus ul { display: block;}
-      } // .hand_language
-      .hand_search {
-        width: 40px; height: 40px;
-        @include img('search.png');
-      }
-      .hand_cart {
-        width: 40px; height: 40px;
-        @include img('cart.png');
-      }
-      .hand_menu {
-        width: 40px; height: 40px;
-        @include img('menu.png');
-      }
+} // #headBox
+// ~1279px
+@media all and (max-width: 1279px) {
+  @at-root h1 {
+    width: 170px; height: 40px;
+    // margin-top: 30px;
+    a{ 
+      @include full;
+      @include img('logo-cubeme-text.png');
+      // background-position-y: 10px;
+      
     }
-  } // ~1279px ===============================================================
+  } // h1
 
-  // ~1280px ----------------------------------------------------------------
-  @media all and (min-width: 1280px) {
-    @at-root h1 {
-      width: 170px; height: 60px;
-      // margin-top: 30px;
-      a{ 
-        @include full;
-        @include img('logo-cubeme-text.png');
-        // background-position-y: 10px;
-        
+  #navigation { display: none;}
+  #hand_nav { 
+    display: block;
+    display: flex; justify-content: space-between;
+    width: 230px; height: 40px;
+    // margin-top: 40px;
+
+    @at-root .hand_language {
+      position: relative;
+      width: 40px; height: 40px;
+      @include img('global_1.png');
+      ul {
+        display: none;
+        position: absolute;
+        top: 50px; left: 0;
+        li {
+          margin-bottom: 5px;
+        }
       }
-    } // h1
-    #naviagtion { display: block;}
-    #hand_nav {display: none;}
-    @at-root #gnb ul {
-      position: absolute; left: 0; right: 0;
+      a { 
+        display: none;
+        width: 50px; height: 20px;
+        font-size: 14px;
+      }
+      &:hover ul { display: block;}
+      &:focus ul { display: block;}
+    } // .hand_language
+    .hand_search {
+      width: 40px; height: 40px;
+      @include img('search.png');
+    }
+    .hand_cart {
+      width: 40px; height: 40px;
+      @include img('cart.png');
+    }
+    .hand_menu {
+      width: 40px; height: 40px;
+      @include img('menu.png');
+    }
+  }
+} // ~1279px ===============================================================
+
+// 1280px ~ ----------------------------------------------------------------
+@media all and (min-width: 1280px) {
+  @at-root h1 {
+    width: 170px; height: 60px;
+    // margin-top: 30px;
+    a{ 
+      @include full;
+      @include img('logo-cubeme-text.png');
+      // background-position-y: 10px;
+      
+    }
+  } // h1
+  #naviagtion { display: block;}
+  #hand_nav {display: none;}
+  @at-root #gnb ul {
+    position: absolute; left: 0; right: 0;
+    display: flex; justify-content: space-between;
+    width: 500px; height: 40px;
+    margin: auto; margin-top: 50px;
+
+    li {
+      width: auto;
+      text-align: center; line-height: 40px;
+      font-size: 18px;
+    }
+  } // #gnb
+
+  @at-root .unb {
+    width: 300px; height: auto;
+
+    @at-root .unb_btn {
+      // float: left;
       display: flex; justify-content: space-between;
-      width: 500px; height: 40px;
-      margin: auto; margin-top: 50px;
-  
-      li {
-        width: auto;
-        text-align: center; line-height: 40px;
-        font-size: 18px;
+      width: auto; height: 30px;
+      margin: auto; margin-left: 40px; margin-bottom: 20px;
+      
+      &>li {
+        position: relative;
+        display: block;
+        width: auto; height: auto;
+        margin-right: 8px; padding-right: 8px;
+        font-size: 16px;
+        text-align: center; line-height: 20px;
       }
-    } // #gnb
-  
-    @at-root .unb {
-      width: 300px; height: auto;
-  
-      @at-root .unb_btn {
-        // float: left;
-        display: flex; justify-content: space-between;
-        width: auto; height: 30px;
-        margin: auto; margin-left: 40px; margin-bottom: 20px;
-        
-        &>li {
-          position: relative;
-          display: block;
-          width: auto; height: auto;
-          margin-right: 8px; padding-right: 8px;
-          font-size: 16px;
-          text-align: center; line-height: 20px;
-        }
-        &>li::after {
-          content: "";
-          display: block;
-          position: absolute;
-          top: 3px; right: 0;
-          width:1px; height: 15px;
-          background-color: #999;
-        }
-        &>li:last-child::after { display: none;}
-  
-        .unb_language {
-          position: relative;
-          width: 30px; height: 20px;
-          margin-left: 30px;
-          @include img('global_1.png');
-        }
-        @at-root .unb_lauguage_area {
-          display: none;
-          position: absolute; z-index: 10; top: 30px; left: -50px;
-          width: 100px; height: auto;
-          background-color: #efefef;
+      &>li::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 3px; right: 0;
+        width:1px; height: 15px;
+        background-color: #999;
+      }
+      &>li:last-child::after { display: none;}
 
-          li {
-            margin: auto; margin-bottom: 5px;
-            font-size: 14px;
-            a {
-              @include full;
-              &:hover { background-color: #ddd;}
-            }
-          }
+      .unb_language {
+        position: relative;
+        width: 30px; height: 20px;
+        margin-left: 30px;
+        @include img('global_1.png');
+      }
+      @at-root .unb_lauguage_area {
+        display: none;
+        position: absolute; z-index: 10; top: 30px; left: -50px;
+        width: 100px; height: auto;
+        background-color: #efefef;
 
-        } // .unb_lauguage_area
-        
-        .unb_sign {color: $color_red;}
-  
-      } // .unb_btn
-  
-      @at-root .unb_search_area {
-        // float: left;
-        display: flex; justify-content: space-between;
-        width: 200px; height: 30px;
-        border-radius: 15px;
-        margin: auto; margin-right: 10px;
-  
-        @at-root .unb_search {
-          position: relative;
-          width: 160px; height: 30px;
-          margin: auto; margin-right: 10px;
-          border-radius: 15px;
-  
-          #search_bar {
-            width: 160px; height: 30px;
-            border-radius: 15px;
-            text-indent: 8px;
-            background-color: #ebebeb;
-          }
-  
-          .unb_search_icon {
-            position: absolute;
-            top: 4px; right: 10px;
-            width: 20px; height: 20px;
-    
-            button {
-              // display: block;
-              width: 100%; height: 100%;
-              // margin-top: 4px;
-              @include img('search.png');
-            }
-          }
-        } // .unb_search
-  
-        @at-root .unb_cart {
-          width: 24px; height: 24px;
-          margin: auto; margin-top: 3px;
-  
+        li {
+          margin: auto; margin-bottom: 5px;
+          font-size: 14px;
           a {
             @include full;
-            @include img('cart.png');
+            &:hover { background-color: #ddd;}
           }
         }
-  
-      } // .unb_search_area
-    } // .unb
-  
-  } // ~1280px ====================================================================
-  
 
-} // #headBox
+      } // .unb_lauguage_area
+      
+      .unb_sign {color: $color_red;}
+
+    } // .unb_btn
+
+    @at-root .unb_search_area {
+      // float: left;
+      display: flex; justify-content: space-between;
+      width: 200px; height: 30px;
+      border-radius: 15px;
+      margin: auto; margin-right: 10px;
+
+      @at-root .unb_search {
+        position: relative;
+        width: 160px; height: 30px;
+        margin: auto; margin-right: 10px;
+        border-radius: 15px;
+
+        #search_bar {
+          width: 160px; height: 30px;
+          border-radius: 15px;
+          text-indent: 8px;
+          background-color: #ebebeb;
+        }
+
+        .unb_search_icon {
+          position: absolute;
+          top: 4px; right: 10px;
+          width: 20px; height: 20px;
+  
+          button {
+            // display: block;
+            width: 100%; height: 100%;
+            // margin-top: 4px;
+            @include img('search.png');
+          }
+        }
+      } // .unb_search
+
+      @at-root .unb_cart {
+        width: 24px; height: 24px;
+        margin: auto; margin-top: 3px;
+
+        a {
+          @include full;
+          @include img('cart.png');
+        }
+      }
+
+    } // .unb_search_area
+  } // .unb
+
+} // 1280px ~ ====================================================================
+
