--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -189,7 +189,7 @@ html, body {
     right: 0;
     display: flex;
     justify-content: space-between;
-    width: 500px;
+    width: 39vw;
     height: 40px;
     margin: auto;
     margin-top: 50px;
@@ -418,8 +418,9 @@ html, body {
   .foot_main_area .foot_main_btn {
     display: flex;
     justify-content: space-between;
-    width: 600px;
-    height: 30px;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
     font-size: 16px;
     text-align: left;
     color: #ddd;
@@ -676,19 +677,20 @@ html, body {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 600px;
+  height: auto;
   margin-top: 150px;
   padding: 20px 50px;
 }
 .view_area {
   position: relative;
-  width: 750px;
-  height: 550px;
+  width: 58.6vw;
+  height: 43vw;
   background-color: #eee;
 }
 .view_area .view_btn {
   position: absolute;
   top: 50%;
+  left: 25px;
   width: 100%;
   height: 50px;
   margin: -25px;
@@ -738,8 +740,8 @@ html, body {
 }
 .view {
   overflow: hidden;
-  width: 750px;
-  height: 550px;
+  width: 100%;
+  height: 100%;
 }
 .view .view_in_wrap {
   width: 500%;
@@ -764,6 +766,36 @@ html, body {
 }
 .view .view_in_wrap .view_content_05 {
   background-color: #F9495D77;
+}
+
+.view_area .view_num {
+  position: absolute;
+  left: 20px;
+  bottom: 10px;
+  width: 70px;
+  height: 25px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 25px;
+  color: #fff;
+}
+.side_view_area {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 31.25vw;
+  height: 43vw;
+}
+.side_view_area .side_view {
+  width: 100%;
+  height: 14vw;
+  background-color: #eee;
+  margin: auto;
+}
+.side_view_area .side_view a {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=main_v2.css.map */
