--- a/study_code/a_project/scss/common/_footBox.scss
+++ b/study_code/a_project/scss/common/_footBox.scss
@@ -42,7 +42,8 @@
     margin: auto;
     .foot_main_btn {
       display: flex; justify-content: space-between;
-      width: 600px; height: 30px;
+      flex-wrap: wrap;
+      width: 100%; height: auto;
       font-size: 16px;
       text-align: left; color: #ddd;
       margin-bottom: 30px;
