[add] main-viewBox handhelds 부분

--- a/study_code/a_project/css/src/main_v2.css
+++ b/study_code/a_project/css/src/main_v2.css
@@ -674,26 +674,17 @@ html, body {
   }
 }
 #viewBox {
-  display: flex;
-  justify-content: space-between;
   width: 100%;
   height: auto;
-  margin-top: 150px;
-  padding: 20px 50px;
 }
 .view_area {
   position: relative;
-  width: 58.6vw;
-  height: 43vw;
-  background-color: #eee;
 }
 .view_area .view_btn {
   position: absolute;
   top: 50%;
-  left: 25px;
   width: 100%;
   height: 50px;
-  margin: -25px;
 }
 .view_area .view_btn > div {
   position: absolute;
@@ -779,23 +770,235 @@ html, body {
   line-height: 25px;
   color: #fff;
 }
-.side_view_area {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 31.25vw;
-  height: 43vw;
+
+@media all and (max-width: 1279px) {
+  .view_area {
+    position: relative;
+    width: 100%;
+    height: 90vw;
+    background-color: #ddd;
+  }
+  .view_area .view_btn {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 50px;
+  }
+  .view_area .view_btn > div {
+    position: absolute;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: -25px;
+  }
+  .view_area .view_btn .view_after_btn {
+    right: 0;
+    background-image: url(../../img/forward.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .view_area .view_btn .view_after_btn > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .view_area .view_btn .view_before_btn {
+    left: 0;
+    background-image: url(../../img/back.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .view_area .view_btn .view_before_btn > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .view_area .view_btn button {
+    width: 100%;
+    height: 100%;
+  }
+  .view {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+  }
+  .view .view_in_wrap {
+    width: 500%;
+    height: 100%;
+  }
+  .view .view_in_wrap .view_content {
+    float: left;
+    width: 20%;
+    height: 100%;
+  }
+  .view .view_in_wrap .view_content_01 {
+    background-color: #9e728c77;
+  }
+  .view .view_in_wrap .view_content_02 {
+    background-color: #FE5AE677;
+  }
+  .view .view_in_wrap .view_content_03 {
+    background-color: #BCCCD477;
+  }
+  .view .view_in_wrap .view_content_04 {
+    background-color: #5DD95977;
+  }
+  .view .view_in_wrap .view_content_05 {
+    background-color: #F9495D77;
+  }
+
+  .view_area .view_num {
+    position: absolute;
+    left: 20px;
+    bottom: 10px;
+    width: 70px;
+    height: 25px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 25px;
+    color: #fff;
+  }
+
+  #viewBox .side_view_area {
+    display: none;
+  }
 }
-.side_view_area .side_view {
-  width: 100%;
-  height: 14vw;
-  background-color: #eee;
-  margin: auto;
-}
-.side_view_area .side_view a {
-  display: block;
-  width: 100%;
-  height: 100%;
+@media all and (min-width: 1280px) {
+  #viewBox {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    margin-top: 150px;
+    padding: 20px 50px;
+  }
+  .view_area {
+    position: relative;
+    width: 58.6vw;
+    height: 43vw;
+  }
+  .view_area .view_btn {
+    position: absolute;
+    top: 50%;
+    left: 25px;
+    width: 100%;
+    height: 50px;
+    margin: -25px;
+  }
+  .view_area .view_btn > div {
+    position: absolute;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: -25px;
+  }
+  .view_area .view_btn .view_after_btn {
+    right: 0;
+    background-image: url(../../img/forward.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .view_area .view_btn .view_after_btn > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .view_area .view_btn .view_before_btn {
+    left: 0;
+    background-image: url(../../img/back.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+  }
+  .view_area .view_btn .view_before_btn > span {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    clip: rect(0 0 0 0);
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+  .view_area .view_btn button {
+    width: 100%;
+    height: 100%;
+  }
+  .view {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+  }
+  .view .view_in_wrap {
+    width: 500%;
+    height: 100%;
+  }
+  .view .view_in_wrap .view_content {
+    float: left;
+    width: 20%;
+    height: 100%;
+  }
+  .view .view_in_wrap .view_content_01 {
+    background-color: #9e728c77;
+  }
+  .view .view_in_wrap .view_content_02 {
+    background-color: #FE5AE677;
+  }
+  .view .view_in_wrap .view_content_03 {
+    background-color: #BCCCD477;
+  }
+  .view .view_in_wrap .view_content_04 {
+    background-color: #5DD95977;
+  }
+  .view .view_in_wrap .view_content_05 {
+    background-color: #F9495D77;
+  }
+
+  .view_area .view_num {
+    position: absolute;
+    left: 20px;
+    bottom: 10px;
+    width: 70px;
+    height: 25px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 25px;
+    color: #fff;
+  }
+  .side_view_area {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 31.25vw;
+    height: 43vw;
+  }
+  .side_view_area .side_view {
+    width: 100%;
+    height: 14vw;
+    background-color: #eee;
+    margin: auto;
+  }
+  .side_view_area .side_view a {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 /*# sourceMappingURL=main_v2.css.map */
