--- a/study_code/a_project/scss/src/main_v2.scss
+++ b/study_code/a_project/scss/src/main_v2.scss
@@ -11,103 +11,186 @@ html, body { color: #171717; font-weight: 400;}
 @import '../common/headBox';
 @import '../common/footBox';
 
-#viewBox {
-  display: flex; justify-content: space-between;
-  width: 100%; height: auto;
-  margin-top: 150px;
-  padding: 20px 50px;
-  
+@import './main_viewBox';
 
-  @at-root .view_area {
-    position: relative;
-    // width: 750px; height: 550px;
-    width: 58.6vw; height: 43vw;
-    background-color: #eee;
-    
-    .view_btn {
-      position: absolute; top: 50%; left: 25px;
-      width: 100%; height: 50px;
-      margin: -25px;
+// ~1279px ------------------------------------------------------
+@media all and (max-width: 1279px){
 
-      & > div {
-        position: absolute;
-        top: 50%;
-        width: 50px; height: 50px;
-        margin-top: -25px;
-      }
-      
-      .view_after_btn { 
-        right: 0;
-        @include img('forward.png');
-      }
-      .view_before_btn { 
-        left: 0;
-        @include img('back.png');
-      }
-    }
+  #viewBox {
 
+    @at-root .view_area {
+      position: relative;
+      width: 100%; height: 90vw;
+      background-color: #ddd;
 
+      .view_btn {
+        position: absolute; top: 50%; left: 0; right: 0;
+        width: 100%; height: 50px;
 
-    .view_btn button {
-      width: 100%; height: 100%;
-      // &:hover { transform: scale(1.3); transition: transform 300ms ease;}
-      // &:focus { border-radius: 0.25rem; outline: 3px solid #171717;}
-    }
+        & > div {
+          position: absolute;
+          top: 50%;
+          width: 50px; height: 50px;
+          margin-top: -25px;
+        }
 
-    @at-root .view {
-      overflow: hidden;
-      // width: 750px; height: 550px;
-      width: 100%; height: 100%;
-      .view_in_wrap {
-        width: calc(100% * $view_len);
-        height: 100%;
+        .view_after_btn { 
+          right: 0;
+          @include img('forward.png');
+        }
+        .view_before_btn { 
+          left: 0;
+          @include img('back.png');
+        }
 
-        .view_content {
-          float: left;
-          width: calc(100% / $view_len);
+        button { width: 100%; height: 100%;}
+      } // .view_btn
+
+      @at-root .view {
+        overflow: hidden;
+        width: 100%; height: 100%;
+        .view_in_wrap {
+          width: calc(100% * $view_len);
           height: 100%;
 
+          .view_content {
+            float: left;
+            width: calc(100% / $view_len);
+            height: 100%;
+          }
+          .view_content_01 { 
+            background-color: #9e728c77;
+          }
+          .view_content_02 { 
+            background-color: #FE5AE677;
+          }
+          .view_content_03 { 
+            background-color: #BCCCD477;
+          }
+          .view_content_04 { 
+            background-color: #5DD95977;
+          }
+          .view_content_05 { 
+            background-color: #F9495D77;
+          }
         }
-        .view_content_01 { 
-          background-color: #9e728c77;
-        }
-        .view_content_02 { 
-          background-color: #FE5AE677;
-        }
-        .view_content_03 { 
-          background-color: #BCCCD477;
-        }
-        .view_content_04 { 
-          background-color: #5DD95977;
-        }
-        .view_content_05 { 
-          background-color: #F9495D77;
-        }
-      } // .view_in_wrap
-    } // .view
+      } // .view
 
-    .view_num {
-      position: absolute;
-      left: 20px; bottom: 10px;
-      width: 70px; height: 25px;
-      font-weight: 700;
-      text-align: center; line-height: 25px;
-      color: #fff;
-    }
-
-    @at-root .side_view_area {
-      display: flex; flex-direction: column; justify-content: space-between;
-      // width: 400px; height: 550px;
-      width: 31.25vw; height: 43vw;
-      .side_view {
-        // width: 100%; height: 180px;
-        width: 100%; height: 14vw;
-        background-color: #eee;
-        margin: auto; 
-        
-        a { @include full;}
+      .view_num {
+        position: absolute;
+        left: 20px; bottom: 10px;
+        width: 70px; height: 25px;
+        font-weight: 700;
+        text-align: center; line-height: 25px;
+        color: #fff;
       }
-    }
-  } // .view_area
+    } // .view_area
+    .side_view_area{ display: none;}
+  } // #viewBox
 
-} // #viewBox
+}// ~1279px ===============================================================
+
+// 1280px ~ ----------------------------------------------------------------
+@media all and (min-width :1280px){
+  #viewBox {
+    display: flex; justify-content: space-between;
+    width: 100%; height: auto;
+    margin-top: 150px;
+    padding: 20px 50px;
+    
+
+    @at-root .view_area {
+      position: relative;
+      // width: 750px; height: 550px;
+      width: 58.6vw; height: 43vw;
+      // background-color: #eee;
+      
+      .view_btn {
+        position: absolute; top: 50%; left: 25px;
+        width: 100%; height: 50px;
+        margin: -25px;
+
+        & > div {
+          position: absolute;
+          top: 50%;
+          width: 50px; height: 50px;
+          margin-top: -25px;
+        }
+        
+        .view_after_btn { 
+          right: 0;
+          @include img('forward.png');
+        }
+        .view_before_btn { 
+          left: 0;
+          @include img('back.png');
+        }
+      }
+
+
+
+      .view_btn button {
+        width: 100%; height: 100%;
+        // &:hover { transform: scale(1.3); transition: transform 300ms ease;}
+        // &:focus { border-radius: 0.25rem; outline: 3px solid #171717;}
+      }
+
+      @at-root .view {
+        overflow: hidden;
+        // width: 750px; height: 550px;
+        width: 100%; height: 100%;
+        .view_in_wrap {
+          width: calc(100% * $view_len);
+          height: 100%;
+
+          .view_content {
+            float: left;
+            width: calc(100% / $view_len);
+            height: 100%;
+
+          }
+          .view_content_01 { 
+            background-color: #9e728c77;
+          }
+          .view_content_02 { 
+            background-color: #FE5AE677;
+          }
+          .view_content_03 { 
+            background-color: #BCCCD477;
+          }
+          .view_content_04 { 
+            background-color: #5DD95977;
+          }
+          .view_content_05 { 
+            background-color: #F9495D77;
+          }
+        } // .view_in_wrap
+      } // .view
+
+      .view_num {
+        position: absolute;
+        left: 20px; bottom: 10px;
+        width: 70px; height: 25px;
+        font-weight: 700;
+        text-align: center; line-height: 25px;
+        color: #fff;
+      }
+
+      @at-root .side_view_area {
+        display: flex; flex-direction: column; justify-content: space-between;
+        // width: 400px; height: 550px;
+        width: 31.25vw; height: 43vw;
+        .side_view {
+          // width: 100%; height: 180px;
+          width: 100%; height: 14vw;
+          background-color: #eee;
+          margin: auto; 
+          
+          a { @include full;}
+        }
+      }
+    } // .view_area
+
+  } // #viewBox
+
+} // 1280px ~ ====================================================================
